--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jquery": "*",
     "underscore": "*",
     "express": "~3.2.6",
+    "mongoose":"*",
     "ejs": "*",
     "body-parser": "~1.12.0",
     "express-ejs-layouts": "~1.1.0"
