--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "jquery": "*",
     "underscore": "*",
     "express": "~3.2.6",
-    "mongoose":"*",
+    "mongoose": "*",
     "ejs": "*",
     "body-parser": "~1.12.0",
     "express-ejs-layouts": "~1.1.0"
@@ -33,6 +33,7 @@
     "node": "*"
   },
   "devDependencies": {
+    "mongoose": "^4.4.13",
     "node": "0.0.0"
   }
 }
