--- a/package.json
+++ b/package.json
@@ -21,13 +21,12 @@
   },
   "homepage": "",
   "dependencies": {
-    "jquery": "*",
-    "underscore": "*",
-    "express": "~3.2.6",
-    "mongoose": "*",
-    "ejs": "*",
     "body-parser": "~1.12.0",
-    "express-ejs-layouts": "~1.1.0"
+    "ejs": "*",
+    "express": "~3.2.6",
+    "express-ejs-layouts": "~1.1.0",
+    "jquery": "*",
+    "underscore": "*"
   },
   "engines": {
     "node": "*"
